welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: not found: type ==
     if(c:Color == color.pink){
                ^